--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1537,6 +1537,8 @@
   padding: calc(var(--spacing) * 6);
 }
 .nav-link {
+  font-size: var(--text-lg);
+  line-height: var(--tw-leading, var(--text-lg--line-height));
   --tw-font-weight: var(--font-weight-medium);
   font-weight: var(--font-weight-medium);
   color: var(--color-text-secondary);
@@ -1643,7 +1645,7 @@
 .auth-card {
   width: 100%;
   max-width: var(--container-md);
-  border-radius: var(--radius-2xl);
+  border-radius: var(--radius-xl);
   border-style: var(--tw-border-style);
   border-width: 1px;
   border-color: var(--color-border);
